# luminal

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  binary_fusion_new_design.docx  binary_fusion_new_design.md  binary_fusion_rules_review.docx  binary_fusion_rules_review.md  closed-source-security-report.md  hold.md
.cargo/: config.toml
.devcontainer/: devcontainer.json
.devcontainer/cpu/: devcontainer.json
.devcontainer/cuda/: devcontainer.json
.github/workflows/: clippy.yml  cuda-clippy.yml  fmt.yml  lint.yml  (+12 more)
ci/: example_output.py  examples_perf.py  metal_llama_1b_example.py  metal_qwen_example.py  modal_cargo_clippy.py  modal_cargo_test.py  modal_example.py  modal_llama.py
crates/luminal_bench/: Cargo.toml  README.md
crates/luminal_bench/benches/: micro.rs  patterns.rs
crates/luminal_bench/examples/: debug_ops.rs
crates/luminal_bench/src/: lib.rs  metal_backend.rs  metrics.rs  micro.rs  patterns.rs
crates/luminal_bench/src/egglog_debug/: analysis.rs  mod.rs  report.rs  trace.rs
crates/luminal_cuda/: Cargo.toml  README.md
crates/luminal_cuda/src/: graph.rs  lib.rs  logical.rs  runtime.rs  tests.rs
crates/luminal_cuda/src/block/: cstruct.rs  interpreter.cu  mod.rs  ops.rs  runtime.rs  to_kernel.rs
crates/luminal_cuda/src/host/: mod.rs
crates/luminal_cuda/src/host/cublas/: mod.rs  sgemm_v2_CmCm_rewrite.egg  sgemm_v2_CmRm_rewrite.egg  sgemm_v2_RmCm_rewrite.egg  sgemm_v2_RmRm_rewrite.egg  sgemm_v2_rewrites.egg
crates/luminal_cuda/src/host/cublas/level_3/: mod.rs
crates/luminal_cuda/src/host/cublaslt/: cublaslt_CmCm_rewrite.egg  cublaslt_CmRm_rewrite.egg  cublaslt_RmCm_rewrite.egg  cublaslt_RmRm_rewrite.egg  mod.rs
crates/luminal_cuda/src/host/host_matmul/: cuBLAS_SGEMM_V2_TN_rewrite.egg  mod.rs  rewrite.egg
crates/luminal_cuda/src/host/moe/: glumoe_rewrite.egg  mod.rs
crates/luminal_cuda/src/kernel/: cuda_graph.rs  hlir.rs  mod.rs  ops.rs  other_ops.rs  to_host.rs
crates/luminal_cuda/src/tests/: misc.rs  mod.rs  mxfp4.rs  nvfp4.rs  op_functional_tests.rs  ops.rs  utilities.rs
crates/luminal_cuda/tests/: host_matmul_test.rs
crates/luminal_metal/: Cargo.toml  review.md
crates/luminal_metal/examples/: llama_1b.rs
crates/luminal_metal/src/: dyn_backend.rs  lib.rs  memory_analysis.rs  runtime.rs  tests.rs
crates/luminal_metal/src/kernel/: matmul.rs  mod.rs  ops.rs
crates/luminal_python/: .gitignore  CLAUDE.md  Cargo.toml  LessonsLearned.md  ONNX_OP_DIFFICULTY.md  QWEN_IMAGE_STATUS.md  README.md  auto-Y.jupyterlab-workspace  debug_cast.py  debug_onnx.py  modal_pytest_runner.py  modal_runner.py  pyproject.toml  run.sh  run_all_tests.sh  run_test.sh  run_test_fx.sh  run_tests_cuda.sh  run_tests_cuda_fx.sh  test_backend_selection.py
crates/luminal_python/.ipynb_checkpoints/: pyproject-checkpoint.toml
crates/luminal_python/examples/: whisper.py
crates/luminal_python/examples_python/: README.md  example.py
crates/luminal_python/gpu-dashboard/: Cargo.toml
crates/luminal_python/gpu-dashboard/src/: main.rs
crates/luminal_python/python/luminal/: README.md  main.py
crates/luminal_python/rust/: Cargo.toml
crates/luminal_python/rust/src/: compiled_graph.rs  dim_arith.rs  dispatch.rs  lib.rs  onnx_translator.rs  ops_parse.rs  pt2_compiled_model.rs  pt2_expr.rs  pt2_parser.rs  pt2_schema.rs  pt2_util.rs  runtime.rs  torch_dtype.rs  typed_data.rs  util.rs
crates/luminal_python/rust/src/ops_parse/: binary.rs  convolution.rs  matmul.rs  mod.rs  movement.rs  reduction.rs  tensor.rs  unary.rs
crates/luminal_python/rust/src/translator/: attention.rs  binary.rs  conv.rs  dispatch.rs  matmul.rs  mod.rs  movement.rs  movement_dynamic.rs  reduction.rs  tensor.rs  unary.rs
crates/luminal_python/src/: compiled_graph.rs  dispatch.rs  ops_parse.rs  runtime.rs  util.rs
crates/luminal_python/src/luminal/: __init__.py  cache_utils.py  compiled_model.py  dtype_util.py  main.py  pt2.py
crates/luminal_python/tests/: _test_kimi_k25.py  _test_kv_cache_comparison.py  _test_kv_cache_growing.py  _test_qwen3.py  _test_qwen3_moe.py  _test_qwen_image.py  conftest.py  generate_llama38b_artifacts.py  generate_llama38b_pt2_artifacts.py  kimi_k25_model.py  llam3_model.py  test_bf16_mixed_mechanism.py  test_bf16_nondeterminism.py  test_capsule_validation.py  test_dtype_boundary.py  test_dynamic_shapes.py  test_gather_scatter_dynamic.py  test_hlir_ops.py  test_kimi_k25.py  test_kv_cache_growing.py  test_llama3.py  test_models.py  test_qwen3.py  test_qwen3_moe.py  test_qwen_image.py  test_scalars.py  test_torch_dtype_parity.py  test_unary.py  test_whisper.py  test_yolo_v11.py
crates/luminal_python/tests/llama3/: config.json  llama3_model.py
docs/: IMG_3273.HEIC
examples/: README.md
examples/cuda_matmul/: .gitignore  Cargo.toml
examples/cuda_matmul/src/: main.rs
examples/gemma4_moe/: Cargo.toml
examples/gemma4_moe/src/: hf.rs  main.rs  model.rs
examples/llama/: .gitignore  Cargo.toml  README.md  build.rs  exec.txt  llir.txt
examples/llama/.cargo/: config.toml
examples/llama/setup/: setup.py
examples/llama/src/: benchmark.rs  hf.rs  main.rs  model.rs
examples/qwen/: Cargo.toml  README.md
examples/qwen/setup/: setup.py
examples/qwen/src/: hf.rs  lib.rs  main.rs  model.rs
examples/visualization/: .gitignore  Cargo.toml  README.md
examples/visualization/src/: main.rs
examples/yolo_v11/: .gitignore  Cargo.toml  README.md
examples/yolo_v11/src/: main.rs  model.rs
fusion_trees/: cascade.dot  diamond.dot  fanout.dot  gen.sh  gen_v2.sh  grow_alternatives.dot  grow_quadratic.dot  rematch.dot  rule1_lhs.dot  rule1_rhs.dot  rule2_lhs.dot  rule2_rhs.dot  rule3_lhs.dot  rule3_rhs.dot  rule4_lhs.dot  rule4_rhs.dot  rule5_lhs.dot  rule5_rhs.dot  rule6_lhs.dot  rule6_rhs.dot  v2_base1_uu.dot  v2_base2_bu.dot  v2_base3_ub.dot  v2_base4_bb.dot  v2_diamond.dot  v2_discriminator.dot  v2_grow.dot  v2_merge.dot
src/: compiler_utils.rs  dtype.rs  dyn_backend.rs  egglog.egg  generic_compiler.rs  graph.rs  graph_tensor.rs  hlir.rs  lib.rs  logical.rs  op.rs  serialized_egraph.rs  trace.rs  utils.rs  visualization.rs
(+185 files in other folders)
