[package]
name = "luminal"
version = "0.2.0"
edition.workspace = true
rust-version = "1.85"
description = "Deep learning at the speed of light."
license = "MIT OR Apache-2.0"

[dependencies]
itertools = "0.11.0"
num-traits = "0.2.16"
petgraph = "0.6.4"
rand = "0.9.2"
urlencoding = "2.1.2"
webbrowser = "1.0.0"
dyn-clone = "1.0.12"
half = "*"
tinyvec = { version = "1.6.0", features = ["serde"] }
term_size = "0.3.2"
colored = "2.0.4"
regex = "1.9.5"
rustc-hash = "2.1.1"
uuid = { version = "1.7.0", features = ["v4"] }
as-any = "0.3.1"
egg = "0.9.5"
symbolic_expressions = "5.0.3"
serde = { version = "1.0.202", features = ["derive"] }
thread_local = "1.1.8"
generational-box = "0.5.6"
serde_json = "1.0.140"
egglog = "1.0.0"
egglog-ast = "1.0.0"
egraph-serialize = { version = "0.3.0", features = ["graphviz"]}
tracing = "0.1.43"
paste = "1.0.15"
pretty-duration = "0.1.1"
anyhow = "1.0"
graphviz-rust = { version = "0.9", default-features = false}

[workspace.package]
edition = "2024"

[workspace]
members = [
    "examples/llama",
    "examples/visualization",
    #"examples/*",
    "crates/luminal_nn",
    "crates/luminal_cuda",
    "crates/luminal_training",
    "docs/company",
]
exclude = [
    "examples/yolo_v8",
    "crates/luminal_cuda",
]
