[package]
name = "luminal_bench"
version = "0.1.0"
edition.workspace = true
description = "Universal benchmark infrastructure for Luminal backends"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
luminal = { path = "../.." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
egraph-serialize = { version = "0.3.0", default-features = false }

# Backend dependencies - optional, enabled via features
luminal_metal = { path = "../luminal_metal", optional = true }
metal = { version = "0.32", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.9.2"

[features]
default = []
metal = ["dep:luminal_metal", "dep:metal"]

[[bench]]
name = "micro"
harness = false

[[bench]]
name = "patterns"
harness = false
