[package]
name = "luminal_cuda"
version = "0.2.0"
edition = "2021"
description = "Cuda compiler for luminal"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
luminal = { path = "../.." }
cudarc = {version="0.17.3", features=["cuda-12080"]}
rustc-hash = "2.1.1"
as-any = "0.3.2"
egraph-serialize = "0.3.0"
itertools = "0.12.1"
fixedbitset = "0.5.7"
safetensors = "0.7.0"
tracing = "0.1.43"
tracing-perfetto-sdk-schema = "0.13.0"
prost = "0.14.1"
half = "2.7.1"