[package]
name = "luminal_metal"
version = "0.2.0"
edition = "2024"
description = "Metal backend for luminal"
license = "MIT OR Apache-2.0"

[dependencies]
luminal = { path = "../.." }
metal = { version = "0.31", features = ["mps"] }
objc = "0.2"
as-any = "0.3.2"
itertools = "0.12.1"
half = { version = "2.7.1", features = ["bytemuck"] }
tracing = "0.1.43"
safetensors = "0.7.0"
memmap2 = "0.9.9"
bytemuck = "1.24.0"

[dev-dependencies]
candle-core = "0.9.2-alpha.1"
hf-hub = { version = "0.4", default-features = false, features = ["rustls-tls", "ureq"] }
luminal_nn = { path = "../luminal_nn" }
luminal_tracing = { path = "../luminal_tracing" }
proptest = "1.9.0"
rand = "0.9.2"
rustc-hash = "2.1"
tokenizers = "0.22.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }
