[project]
name = "luminal_python"
version = "0.1.9111"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0.2",
    "torch>=2.10.0",
    "onnx",
    "onnxscript",
]


[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
