[project]
name = "luminal_python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0.2",
    "torch>=2.10.0",
    "safetensors",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]


[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "src"
manifest-path = "rust/Cargo.toml"
module-name = "luminal.luminal"

[tool.pytest.ini_options]
markers = [
    "slow: tests that download large models, compile full-width model graphs, fuzz many CUDA search choices, or otherwise require explicit opt-in",
]

[dependency-groups]
dev = [
    "maturin>=1.0,<2.0",
    "pytest>=9.0.2",
    "pytest-profiling",
    "snakeviz",
    "maturin-import-hook>=0.3.0",
    "pytest-randomly>=4.0.1",
    # <5.11: 5.12 changed DeepSeekV3 MLA RoPE tracing to a mul the translator
    # can't broadcast yet (test_kv_cache_growing_r1_mla); unpin once handled.
    "transformers>=4.40.0,<5.11",
    "diffusers>=0.35.0",
    "modal>=1.3.5",
]
