[package]
name = "cuda_matmul"
version = "0.1.0"
edition = "2021"

[dependencies]
luminal = { path = "../.." }
luminal_cuda = { path = "../../crates/luminal_cuda" }
luminal_tracing = {path = "../../crates/luminal_tracing"}
tracing = "0.1.43"
log = "*"
env_logger = "0.11"

[dev-dependencies]
ndarray = "*"
proptest = "*"
rand = "*"