[package]
name = "llama"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]

[dependencies]
luminal = { path = "../.." }
luminal_nn = { path = "../../crates/luminal_nn" }
luminal_cuda = { path = "../../crates/luminal_cuda" }
luminal_tracing = {path="../../crates/luminal_tracing"}
tokenizers = "0.15.2"
tracing = "0.1.43"