[package]
name = "visualization"
version = "0.1.0"
edition = "2021"

[features]

[dependencies]
anyhow = "1.0"
egglog = "1.0"
egglog-ast = "1.0.0"
egraph-serialize = { version = "0.3.0", default-features = false, features = ["graphviz", "serde"]}
itertools = "0.12.1"
luminal = { path = "../.." }
luminal_cuda = { path = "../../crates/luminal_cuda" }
luminal_nn = { path = "../../crates/luminal_nn" }
rustc-hash = "2.1"
tokenizers = "0.15.2"
tracing = "0.1.43"
tracing-appender = "0.2.4"
tracing-perfetto-sdk-layer = "0.13.0"
tracing-perfetto-sdk-schema = "0.13.0"
tracing-perfetto-sdk-sys = "0.13.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
