[package]
name = "visualization"
version = "0.1.0"
edition = "2024"

[features]

[dependencies]
luminal = { path = "../.." }
tikv-jemallocator = { version = "0.7", features = ["unprefixed_malloc_on_supported_platforms"] }
luminal_cuda_lite = { path = "../../crates/luminal_cuda_lite" }
rand = "0.9.2"
