[package]
name = "yolo_v11"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "yolo_v11"
path = "src/main.rs"

[features]

[dependencies]
luminal = { path = "../.." }
luminal_nn = { path = "../../crates/luminal_nn" }
luminal_cuda_lite = { path = "../../crates/luminal_cuda_lite" }
luminal_tracing = { path = "../../crates/luminal_tracing" }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

safetensors = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
half = { version = "2.7.1", features = ["bytemuck"] }
bytemuck = "1.24.0"
memmap2 = "0.9.9"
rustc-hash = "2.1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
ureq = "2"
