[package]
name = "luminal_python"
version = "0.1.0"
edition.workspace = true

[lib]
name = "luminal"
crate-type = ["cdylib"]
path = "src/lib.rs"

[features]
cuda = ["dep:luminal_cuda_lite"]
cuda_heavy = ["dep:luminal_cuda"]

[dependencies]
rustc-hash = "2.1.1"
luminal = {path= "../../.."}
luminal_cuda_lite = {path="../../luminal_cuda_lite", optional = true}
luminal_cuda = {path="../../../../luminal_cuda", optional = true}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"
anyhow = "1"
memmap2 = "0.9"
safetensors = "0.5"
half = "2"

[dependencies.pyo3]
version = "0.28.0"
features = ["abi3-py38"]
